@@ -22,13 +22,12 @@ setClass(Class = "MxPath",
 		free = "logical",
 		labels = "character",
 		lbound = "numeric",
-		ubound = "numeric",
-		excludeself = "logical"
+		ubound = "numeric"
 ))
 
 setMethod("initialize", "MxPath",
 	function(.Object, from, to, arrows, values,
-		free, labels, lbound, ubound, excludeself) {
+		free, labels, lbound, ubound) {
 		.Object@from <- from
 		.Object@to <- to
 		.Object@arrows <- arrows
@@ -37,7 +36,6 @@ setMethod("initialize", "MxPath",
 		.Object@labels <- labels
 		.Object@lbound <- lbound
 		.Object@ubound <- ubound
-		.Object@excludeself <- excludeself
 		return(.Object)
 	}
 )
@@ -45,7 +43,7 @@ setMethod("initialize", "MxPath",
 # returns a list of paths
 generatePath <- function(from, to, 
 		all, arrows, values, free,
-		labels, lbound, ubound, excludeself) {
+		labels, lbound, ubound) {
 	if (single.na(to)) {
 		to <- from
 		loop <- TRUE
@@ -62,7 +60,7 @@ generatePath <- function(from, to,
 	}
 	pathCheckLengths(from, to, arrows, values, 
 		free, labels, lbound, ubound, loop)
-	return(new("MxPath", from, to, arrows, values, free, labels, lbound, ubound, excludeself))
+	return(new("MxPath", from, to, arrows, values, free, labels, lbound, ubound))
 }
 
 pathCheckLengths <- function(from, to, arrows, values, 
@@ -155,15 +153,12 @@ pathCheckVector <- function(value, valname, check, type) {
 }
 
 mxPath <- function(from, to = NA, all = FALSE, arrows = 1, free = TRUE,
-	values = NA, labels = NA, lbound = NA, ubound = NA, excludeself = FALSE) {
+	values = NA, labels = NA, lbound = NA, ubound = NA) {
 	if (missing(from)) {
 		stop("The 'from' argument to mxPath must have a value.")
 	}
 	if (length(all) != 1 || !is.logical(all) || is.na(all)) {
 		stop("The 'all' argument to mxPath must be either true or false.")
-	}
-	if (length(excludeself) != 1 || !is.logical(excludeself) || is.na(excludeself)) {
-		stop("The 'excludeself' argument to mxPath must be either true or false.")
 	}
 	if (all.na(to)) { to <- as.character(to) }
 	if (all.na(values)) { values <- as.numeric(values) }
@@ -180,7 +175,7 @@ mxPath <- function(from, to = NA, all = FALSE, arrows = 1, free = TRUE,
 	pathCheckVector(ubound, 'ubound', is.numeric, 'numeric')
 	generatePath(from, to, all, arrows, 
 		values, free, labels, 
-		lbound, ubound, excludeself)
+		lbound, ubound)
 }
 
 displayPath <- function(object) {
@@ -193,7 +188,6 @@ displayPath <- function(object) {
 	cat("@labels: ", object@labels, '\n')
 	cat("@lbound: ", object@lbound, '\n')
 	cat("@ubound: ", object@ubound, '\n')
-	cat("@excludeself: ", object@excludeself, '\n')
 }
 
 setMethod("print", "MxPath", function(x,...) { displayPath(x) })
