@@ -1,3 +1,7 @@
+svn
+===
+* removed 'excludeself' argument from mxPath() function
+
 Improved Beta Release 999.0.0-1690 (June 27, 2011)
 ==================================================
 * added omxSelectRowsAndCols, omxSelectRows and omxSelectCols documentation
